# pcd_manipulation

./: README.md  __init__.py  cardinal_pomdpx_generator.py  despot_movement.py  despot_single_measure.py  extended_2.pomdpx  extended_3.pomdpx  measurement.py  movement.py  multi_decision_2.pomdpx  pomdpx_generator.py  run_aems2.sh  synthetic_generator.py
baxter_gripper_srv/: CMakeLists.txt  package.xml
baxter_manipulation/: CMakeLists.txt  package.xml
baxter_test/: CMakeLists.txt  package.xml
bay_update/: bayesian_updating.py  out.txt
bayesian_updating/: CMakeLists.txt  package.xml
beer_bottle/: model.config  model.sdf
bulb_pomdpx_builder/: CMakeLists.txt  package.xml
bulb_processor/: CMakeLists.txt  package.xml
bulb_scanner/: CMakeLists.txt  package.xml
conveyor_advance/: CMakeLists.txt  package.xml
despot/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  package.xml
despot_belief_propagation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
despot_eig/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
extended-appl-with-aems2/: out.policy  simulationR.txt
extended-appl-with-aems2/examples/POMDPX/HomeCare/models/: CMakeLists.txt  HomeSw_NESWFXO.cpp  beginingOfModel.xml  modelIn1.txt  modelInGuidline.txt  simOUT.txt  simpleHomeSW.h  simpleHomeSw.cpp  simulateMovments.cpp
models/: training_data.h5  training_data.list
pcd_cloud_saver/: CMakeLists.txt  package.xml
pcd_processor/: CMakeLists.txt  CMakeLists.txt~  package.xml
statistics/: batch_process.py  despot_measure.py  despot_measure_loop.py  (+14 more)
(+563 files in other folders)
